# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml
task_manager/: settings.py  urls.py
task_manager/task_manager/: settings.py  urls.py
task_manager/templates/: base.html  index.html
